ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.2.2, 2.3.1
    • Affects Version/s: 2.2.0
    • Component/s: Tools
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      # mongorestore --port 30001
      connected to: 127.0.0.1:30001
      Thu Oct  4 14:32:37 dump/test/migrations_2_0_7.bson
      Thu Oct  4 14:32:37 	going into namespace [test.migrations_2_0_7]
      Thu Oct  4 14:32:37 dump/test/migrations_2_0_7.metadata.json not found. Skipping.
      309 objects found
      Thu Oct  4 14:32:37 dump/test/migrations_2_2_0.bson
      Thu Oct  4 14:32:37 	going into namespace [test.migrations_2_2_0]
      Thu Oct  4 14:32:37 dump/test/migrations_2_2_0.metadata.json not found. Skipping.
      assertion: 10264 invalid object size: 544565332
      

      Within the attachment, migrations.zip contains two .bson files: one dumped using mongodump v2.0.7 and the other using mongodump v2.2.0.

            Assignee:
            Spencer Brody (Inactive)
            Reporter:
            Stephen Lee (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: