SERVER-7259 Fix mongodump output to stdout by removing log line and making sure stdout is flushed

Conflicts:
	src/mongo/tools/tool.cpp